@@ -8,7 +8,6 @@
      from the name stack, they can not conflict.
   o remove most NAME= rules (they are provided by the 2.6.31 kernel)
   o convert firmware.sh to C
-  o symlink names to udevadm will no longer be resolved to old command names
   o "udevadm control" commands will only accept the --<command> syntax
   o get rid of braindead "scan all devices to find myself" libusb interface
       if it can not be fixed, drop libusb entirely
