@@ -13,6 +13,9 @@ NAME="%k" causes a warning now. It's is and always was completely superfluous.
 It will break kernel supplied DEVNAMEs and therefore it needs to be removed
 from all rules.
 
+Symlinks to udevadm with the old command names are no longer resolved to
+the udevadm commands.
+
 udev 146
 ========
 Bugfixes.
